added borrow form

--- a/src/app/components/addbooks/addbooks.component.html
+++ b/src/app/components/addbooks/addbooks.component.html
@@ -1,5 +1,6 @@
 <app-dashboard></app-dashboard>
 <div class="container">
+  <div class="container">
     <form>
         <div class="form-group">
             <label for="uploadPdf">Upload PDF</label>
@@ -23,8 +24,15 @@
             <option>Horror</option>
             <option>Sci-Fi</option>
           </select>
-      </form>
-      <a role="button" class="btn btn-primary" [routerLink]="['/admin']" (click)="onClick()">
-        Add Book
-    </a>
+          <div class="form-group">
+            <label for="bookauthor">Number of books</label>
+            <input type="text" class="form-control" id="bookauthor" placeholder="Stocks">
+          </div>
+          <br>
+          <a role="button" class="btn btn-primary" [routerLink]="['/admin']" (click)="onClick()">
+           Add Book
+          </a>
+          <app-footer></app-footer>
+      </form>  
+  </div>  
 </div>
