--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -13,7 +13,7 @@
           <label for="password">Password</label>
           <input type="password" class="form-control" id="password" placeholder="Password" required>
         </div>
-        <button type="submit" class="btn btn-primary" [routerLink]="['/dashboard']">Login</button>
+        <button type="submit" class="btn btn-primary" [routerLink]="['/home']">Login</button>
       </form>
   </div>
 </div>
