--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -8,3 +8,8 @@
     /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
     font-weight: 500;
   }
+
+.display-1{
+  font-size: 60px;
+  text-align: center;
+}
