--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
+<app-dashboard></app-dashboard>
 <div class="container">
-  <h1 class="display-3 font-weight-normal">Biblioteca</h1>
   <div style="height: 40px;"></div>
+  <h1 class="display-1">Biblioteca</h1>
 
 <form class="form-inline waves-light" mdbWavesEffect>
   <div class="md-form mt-0">
@@ -22,7 +23,7 @@
         <p><button type="button" class="btn btn-outline-primary btn-sm" [routerLink]="['/bookinfo']">Borrow</button></p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">3 stock left</small>
+        <small class="text-muted">3 stocks left</small>
       </div>
     </div>
     <div class="card">
@@ -30,7 +31,7 @@
       <div class="card-body">
         <h3 class="card-title">Holes</h3>
         <h5>Louis Sachar</h5>
-          <p><button type="button" class="btn btn-outline-primary btn-sm" [routerLink]="['/bookinfo']">Borrow</button></p>
+          <!-- <p><button type="button" class="btn btn-outline-primary btn-sm" (click)="openBorrowform()">Borrow</button></p> -->
       </div>
       <div class="card-footer">
         <small class="text-muted">5 stocks left</small>
@@ -48,7 +49,7 @@
       </div>
     </div>
   </div>
-
+  <div style="height: 30px;"></div>
   <div class="card-deck">
     <div class="card">
       <img class="card-img-top" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1334416842l/830502.jpg" alt="it">
