--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
 
     <div class="footer-copyright text-center py-3">© 2022
       <p>www.biblioteca.com</p>
-      <p>la Bibliothèque d'Archive</p>
+      <p>la Bibliothèque d'Hybrid Cloud Transformation</p>
     </div>
   
 </footer>
