--- a/src/app/components/addbooks/addbooks.component.html
+++ b/src/app/components/addbooks/addbooks.component.html
@@ -1,9 +1,10 @@
-<app-dashboard></app-dashboard>
+<!-- <app-dashboard></app-dashboard> -->
 <div class="container">
   <div class="container">
+    <div style="height: 30px;"></div>
     <form>
         <div class="form-group">
-            <label for="uploadPdf">Upload PDF</label>
+            <label for="uploadPdf">Upload Thumbnail</label>
             <input type="file" class="form-control-file" id="uploadPdf">
           </div>
         <div class="form-group">
@@ -14,7 +15,16 @@
           <label for="bookauthor">Author</label>
           <input type="text" class="form-control" id="bookauthor" placeholder="Author">
         </div>
-        <label for="genre">Genre</label>
+        <h4>Genre</h4>
+        <mat-form-field appearance="fill">
+          <mat-label>Pick a genre</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let genre of genres" [value]="genre.value">
+              {{genre.viewValue}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <!-- <label for="genre">Genre</label>
         <select class="form-control">
             <option>--select--</option>
             <option>Adventure</option>
@@ -23,11 +33,12 @@
             <option>Fantasy Fiction</option>
             <option>Horror</option>
             <option>Sci-Fi</option>
-          </select>
-          <div class="form-group">
+          </select> -->
+        <br>
+        <div class="form-group">
             <label for="bookauthor">Number of books</label>
-            <input type="text" class="form-control" id="bookauthor" placeholder="Stocks">
-          </div>
+            <input type="number" class="form-control" id="bookauthor" placeholder="Stocks">
+        </div>
           <br>
           <a role="button" class="btn btn-primary" [routerLink]="['/admin']" (click)="onClick()">
            Add Book
