--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<nav class="nav">
+<!-- <nav class="nav">
     <a class="nav-link active" aria-current="page" [routerLink]="['/home']">Home</a>
     <a class="nav-link" [routerLink]="['/addbooks']">Add books</a>
     <a class="nav-link" [routerLink]="['/requests']">View requests
@@ -7,4 +7,11 @@
             </span>
     </a>
     <a class="nav-link" [routerLink]="['/borrowers']">View Borrowers</a>
-</nav>
+</nav> -->
+
+<mat-tab-group>
+  <mat-tab label="Home"> <app-home></app-home></mat-tab>
+  <mat-tab label="Add Books"> <app-addbooks></app-addbooks> </mat-tab>
+  <mat-tab label="View Requests"> <app-requests></app-requests> </mat-tab>
+  <mat-tab label="View Borrowers"> <app-borrowers></app-borrowers> </mat-tab>
+</mat-tab-group>
