--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f0cba8;">
+<!-- <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f0cba8;">
     <a class="navbar-brand" [routerLink]="['/home']">
       <img src="https://i.pinimg.com/originals/b2/80/95/b2809540b5c51836a90ea89200558a32.jpg" width="30" height="30" class="d-inline-block align-top" alt=""> Biblioteca</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,19 +7,23 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <!-- <li class="nav-item active">
-          <a class="nav-link" >Home <span class="sr-only">(current)</span></a>
-        </li> -->
-        <!-- <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/shop']">Explore</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/library']">Your Library</a>
-        </li> -->
       </ul>
-      <!-- <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search Books" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" [routerLink]="['/account']">Search</button>
-      </form> -->
     </div>
-  </nav>
+  </nav> -->
+
+  <mat-drawer-container class="example-container" autosize>
+    <mat-drawer #drawer class="example-sidenav" mode="side">
+      <p>Categories</p>
+      <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
+      <button (click)="showFiller = !showFiller" mat-raised-button>
+        Toggle extra text
+      </button>
+    </mat-drawer>
+  
+    <div class="example-sidenav-content">
+      <button type="button" class="btn btn-primary btn-sm" mat-button (click)="drawer.toggle()">
+        Biblioteca
+      </button>
+    </div>
+  
+  </mat-drawer-container>
