--- a/src/app/components/requests/requests.component.html
+++ b/src/app/components/requests/requests.component.html
@@ -1,4 +1,4 @@
-<app-dashboard></app-dashboard>
+<!-- <app-dashboard></app-dashboard> -->
 <div>
     <div class="center">
         <ul class="list-group list-group-flush">
