--- a/src/app/components/confirmtext/confirmtext.component.html
+++ b/src/app/components/confirmtext/confirmtext.component.html
@@ -1,5 +1,10 @@
-<h1 mat-dialog-title>Success!</h1>
-<div mat-dialog-content>Just wait for the confirmation if your request is approved</div>
+<h1 mat-dialog-title>
+  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="green" class="bi bi-check-circle" viewBox="0 0 16 16">
+    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+    <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"/>
+  </svg>
+  Success!</h1>
+<div mat-dialog-content>Just wait for the confirmation if your request was approved.</div>
 <div mat-dialog-actions>
   <button mat-dialog-close class="btn btn-light btn-sm" (click)="closeDialog()">Close</button>
 </div>
