--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -10,8 +10,11 @@
 </nav> -->
 
 <mat-tab-group>
-  <mat-tab label="Home"> <app-home></app-home></mat-tab>
+  <!-- <mat-tab label="Home"> <app-home></app-home></mat-tab> -->
+  <mat-tab label="Home"> <app-homegrid></app-homegrid> </mat-tab>
   <mat-tab label="Add Books"> <app-addbooks></app-addbooks> </mat-tab>
   <mat-tab label="View Requests"> <app-requests></app-requests> </mat-tab>
-  <mat-tab label="View Borrowers"> <app-borrowers></app-borrowers> </mat-tab>
+  <mat-tab label="View Active Borrowers"> <app-borrowers></app-borrowers> </mat-tab>
+  <mat-tab label="History"> <app-history></app-history> </mat-tab>
+  <!-- <mat-tab label="login"> <app-admin></app-admin> </mat-tab> -->
 </mat-tab-group>
