--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -32,17 +32,15 @@
 } */
 
 #myBtn {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  font-size: 18px;
-  border: none;
-  outline: none;
-  background-color: rgb(245, 181, 181);
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
+  position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:15px;
+	background-color:rgb(214, 179, 139);
+	color:rgb(255, 255, 255);
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+  z-index: 1;
 }
