--- a/src/app/components/requests/requests.component.html
+++ b/src/app/components/requests/requests.component.html
@@ -2,41 +2,72 @@
 <div>
     <div class="center">
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Aerith Gainsborough
+            <li class="list-group-item">Aerith
                 <span class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <button type="button" class="btn btn-success btn-sm">Accept</button>&nbsp;
+                    <button type="button" class="btn btn-success btn-sm" (click)="onClickAccept()">Accept</button>&nbsp;
                     <button type="button" class="btn btn-danger btn-sm">Decline</button>
                 </span>
                 How to Get a Boyfriend: The Essential Step-by-Step Guide to Find, Get, and Keep a Boyfriend 
             </li>
             <li class="list-group-item">Cloud Strife
                 <span class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <button type="button" class="btn btn-success btn-sm">Accept</button>&nbsp;
-                    <button type="button" class="btn btn-danger btn-sm">Decline</button>
+                    <button type="button" class="btn btn-success btn-sm" (click)="onClickAccept()">Accept</button>&nbsp;
+                    <button type="button" class="btn btn-danger btn-sm" (click)="onClickDecline()">Decline</button>
                 </span>
                 How to Make Friends with the Dark
             </li>
             <li class="list-group-item">Tifa Lockhart
                 <span class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <button type="button" class="btn btn-success btn-sm">Accept</button>&nbsp;
-                    <button type="button" class="btn btn-danger btn-sm">Decline</button>
+                    <button type="button" class="btn btn-success btn-sm" (click)="onClickAccept()">Accept</button>&nbsp;
+                    <button type="button" class="btn btn-danger btn-sm" (click)="onClickDecline()">Decline</button>
                 </span>
                 How to Get a Boyfriend: The Essential Step-by-Step Guide to Find, Get, and Keep a Boyfriend 
             </li>
             <li class="list-group-item">Sora
                 <span class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <button type="button" class="btn btn-success btn-sm">Accept</button>&nbsp;
-                    <button type="button" class="btn btn-danger btn-sm">Decline</button>
+                    <button type="button" class="btn btn-success btn-sm" (click)="onClickAccept()">Accept</button>&nbsp;
+                    <button type="button" class="btn btn-danger btn-sm" (click)="onClickDecline()">Decline</button>
                 </span>
                 Make Friends with a Dog: 18 Tips to Live a Good Life
             </li>
             <li class="list-group-item">Tidus
                 <span class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <button type="button" class="btn btn-success btn-sm">Accept</button>&nbsp;
-                    <button type="button" class="btn btn-danger btn-sm">Decline</button>
+                    <button type="button" class="btn btn-success btn-sm" (click)="onClickAccept()">Accept</button>&nbsp;
+                    <button type="button" class="btn btn-danger btn-sm" (click)="onClickDecline()">Decline</button>
                 </span>
                 Wings of Forgiveness: Working with the Angels to Release, Heal, and Transform
             </li>
           </ul>
     </div>
+    <!-- <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
+      
+        
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+      
+       
+        <ng-container matColumnDef="weight">
+          <th mat-header-cell *matHeaderCellDef> Weight </th>
+          <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        </ng-container>
+      
+        
+        <ng-container matColumnDef="symbol">
+          <th mat-header-cell *matHeaderCellDef> Symbol </th>
+          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table> -->
+
 </div>
+      
+    
