--- a/src/app/components/history/history.component.html
+++ b/src/app/components/history/history.component.html
@@ -1,27 +1,65 @@
 <!-- <app-dashboard></app-dashboard> -->
 <div>
-    <div class="center">
-        <ul class="list-group list-group-flush">
+        <!-- <ul class="list-group list-group-flush">
             <li class="list-group-item">Rinoa Heartilly
+                <p>Borrowed: December 1, 2019</p>
+                <p>Due Date: December 9, 2019</p>
                 <p>Returned: December 12, 2019</p>
                 <p>The Notebook</p>
             </li>
             <li class="list-group-item">Selphie Tilmitt
+                <p>Borrowed: September 1, 2019</p>
+                <p>Due Date: September 9, 2019</p>
                 <p>Returned: October 23, 2019</p>
                 <p>Harry Potter and the Goblet of Fire</p>
             </li>
             <li class="list-group-item">Sephiroth
+                <p>Borrowed: January 1, 2019</p>
+                <p>Due Date: January 9, 2019</p>
                 <p>Returned: November 16, 2019</p>
                 <p>IT</p>
             </li>
             <li class="list-group-item">Vincent Valentine
+                <p>Borrowed: June 1, 2019</p>
+                <p>Due Date: June 5, 2019</p>
                 <p>Returned: June 5, 2019</p>
-                <p>Moby Dick</p>
+                <p>Twilight: New Moon</p>
             </li>
             <li class="list-group-item">Squall Leonhart
+                <p>Borrowed: February 10, 2019</p>
+                <p>Due Date: February 23, 2019</p>
                 <p>Returned: February 23, 2019</p>
                 <p>Snow White</p>
             </li>
-          </ul>
-    </div>
+          </ul> -->
+          <mat-card>
+          <mat-accordion>
+            <mat-expansion-panel>
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  Rinoa Heartilly
+                </mat-panel-title>
+                <mat-panel-description>
+                Twilight
+                </mat-panel-description>
+              </mat-expansion-panel-header>
+              <p>Borrowed: December 1, 2019</p>
+              <p>Due Date: December 9, 2019</p>
+              <p>Returned: December 12, 2019</p>
+            </mat-expansion-panel>
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                  <mat-panel-title>
+                    Sephiroth
+                  </mat-panel-title>
+                  <mat-panel-description>
+                    IT
+                  </mat-panel-description>
+                </mat-expansion-panel-header>
+                <p>Borrowed: December 1, 2019</p>
+              <p>Due Date: December 9, 2019</p>
+              <p>Returned: December 12, 2019</p>
+            </mat-expansion-panel>
+          </mat-accordion>
+          </mat-card>
 </div>
