--- a/src/app/components/addbooks/addbooks.component.html
+++ b/src/app/components/addbooks/addbooks.component.html
@@ -37,10 +37,10 @@
         <br>
         <div class="form-group">
             <label for="bookauthor">Number of books</label>
-            <input type="number" class="form-control" id="bookauthor" placeholder="Stocks" min="1">
+            <input type="number" class="form-control" id="bookauthor" placeholder="Stocks" min="1" max="100">
         </div>
           <br>
-          <a role="button" class="btn btn-primary" [routerLink]="['/admin']" (click)="onClick(book.value)">
+          <a role="button" class="btn btn-primary" (click)="onClick(book.value)">
            Add Book
           </a>
           <app-footer></app-footer>
