--- a/src/app/components/borrowers/borrowers.component.html
+++ b/src/app/components/borrowers/borrowers.component.html
@@ -3,31 +3,39 @@
     <div class="center">
         <ul class="list-group list-group-flush">
             <li class="list-group-item">Rinoa Heartilly
+                <p>Due date: December 12, 2022</p>
+                <p>The Notebook</p>
                 <span class="d-grid gap-2 d-md-flex justify-content-md-end">
                     <button type="button" class="btn btn-warning btn-sm">Return</button>
                 </span>
-                <p>Due date: December 12, 2022</p>
-                <p>The Notebook</p>
             </li>
             <li class="list-group-item">Selphie Tilmitt
                 <p>Due date: October 23, 2022</p>
                 <p>Harry Potter and the Goblet of Fire</p>
-                <div class="d-grid gap-2">
-                    <button class="btn btn-primary" type="button">Return</button>
-                    
-                  </div>
+                <span class="d-grid gap-2 d-md-flex justify-content-md-end">
+                    <button type="button" class="btn btn-warning btn-sm">Return</button>
+                </span>
             </li>
             <li class="list-group-item">Sephiroth
                 <p>Due date: November 16, 2023</p>
                 <p>IT</p>
+                <span class="d-grid gap-2 d-md-flex justify-content-md-end">
+                    <button type="button" class="btn btn-warning btn-sm">Return</button>
+                </span>
             </li>
             <li class="list-group-item">Vincent Valentine
                 <p>Due date: June 5, 2023</p>
-                <p>Moby Dick</p>
+                <p>Twilight</p>
+                <span class="d-grid gap-2 d-md-flex justify-content-md-end">
+                    <button type="button" class="btn btn-warning btn-sm">Return</button>
+                </span>
             </li>
             <li class="list-group-item">Squall Leonhart
                 <p>Due date: February 23, 2026</p>
                 <p>Snow White</p>
+                <span class="d-grid gap-2 d-md-flex justify-content-md-end">
+                    <button type="button" class="btn btn-warning btn-sm">Return</button>
+                </span>
             </li>
           </ul>
     </div>
