--- a/src/app/components/requests/requests.component.css
+++ b/src/app/components/requests/requests.component.css
@@ -1,10 +1,6 @@
 
-.center{
-    /* position:fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    size: 9000px; */
-    inline-size: 1000px;
-    padding-left: 300px;
+.mat-table{
+  margin-left: auto;
+  margin-right: auto;
+  inline-size: 1000px;
 }
