--- a/src/app/components/requests/requests.component.html
+++ b/src/app/components/requests/requests.component.html
@@ -1,8 +1,8 @@
-<!-- <app-dashboard></app-dashboard> -->
-<div>
-    <div class="center">
+
+<!-- <div> -->
+    <!-- <div class="center">
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Aerith
+            <li class="list-group-item">Aerith Gainsborough
                 <span class="d-grid gap-2 d-md-flex justify-content-md-end">
                     <button type="button" class="btn btn-success btn-sm" (click)="onClickAccept()">Accept</button>&nbsp;
                     <button type="button" class="btn btn-danger btn-sm">Decline</button>
@@ -39,35 +39,40 @@
             </li>
           </ul>
     </div>
-    <!-- <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+</div> -->
+
+    <table mat-table [dataSource]="myTable" class="mat-elevation-z8">
 
         <ng-container matColumnDef="position">
-          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <th mat-header-cell *matHeaderCellDef> Name </th>
           <td mat-cell *matCellDef="let element"> {{element.position}} </td>
         </ng-container>
       
         
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <th mat-header-cell *matHeaderCellDef> Book </th>
           <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
       
        
         <ng-container matColumnDef="weight">
-          <th mat-header-cell *matHeaderCellDef> Weight </th>
+          <th mat-header-cell *matHeaderCellDef> Contact Number </th>
           <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
         </ng-container>
-      
+
         
         <ng-container matColumnDef="symbol">
-          <th mat-header-cell *matHeaderCellDef> Symbol </th>
+          <th mat-header-cell *matHeaderCellDef> Return Date </th>
           <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
         </ng-container>
+
+        <ng-container matColumnDef="jjj">
+            <th mat-header-cell *matHeaderCellDef> Return </th>
+            <td mat-cell *matCellDef="let element"> <button type="button" class="btn btn-success btn-sm" (click)="onClickAccept()">{{element.jjj}}</button> </td>
+          </ng-container>
       
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table> -->
-
-</div>
+      </table>
       
     
