--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -44,3 +44,12 @@
 	box-shadow: 2px 2px 3px #999;
   z-index: 1;
 }
+
+/* .table {
+  border: none;
+}
+
+.card mb-3{
+  display: grid;
+  grid-template-columns: auto auto auto;
+} */
