--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -16,5 +16,5 @@
   <mat-tab label="View Requests"> <app-requests></app-requests> </mat-tab>
   <mat-tab label="View Active Borrowers"> <app-borrowers></app-borrowers> </mat-tab>
   <mat-tab label="History"> <app-history></app-history> </mat-tab>
-  <!-- <mat-tab label="login"> <app-admin></app-admin> </mat-tab> -->
+  <!-- <mat-tab label="test"> <app-bookinfo></app-bookinfo> </mat-tab> -->
 </mat-tab-group>
